2015-08-28  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_networking.c (openvas_ssh_pkcs8_decrypt)
	(openvas_ssh_public_from_private): Move functions to misc/openvas_ssh.c

	* base/openvas_networking.h: Remove functions prototypes.

	* misc/CMakeLists.txt: Add openvas_ssh.h and openvas_ssh.c.

	* nasl/nasl_ssh.c: Add include.

	* misc/openvas_ssh.c, misc/openvas_ssh.h: New files.

2015-08-27  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* doc/openvas-nasl.1: Update documentation.

	* misc/prefs.c (prefs_init): Move up, make function static.
	(preferences_get, prefs_get, prefs_get_bool, prefs_set): Initialize
	preferences if not done already.

	* misc/prefs.h: Remove function prototype.

2015-08-27  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvti.c (nvti_category_is_safe): New function.

	* base/nvti.h: Add function prototype.

	* nasl/nasl.c (init): Don't set safe check preference.
	(parse_script_infos): Return nvti entry.
	(main): Check if script is safe in -s mode.

2015-08-26  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_networking.c (sockaddr_as_str): New function.

	* base/openvas_networking.h: Add function prototype.

2015-08-25  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_file.c, base/openvas_file.h (openvas_file_md5sum): Remove
	function.

	* nasl/nasl_grammar.y (file_md5sum): New function. Moved from
	base/openvavs_file.c.
	(init_nasl_ctx): Adjust to use new function.

2015-08-21  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto.c (nasl_cipher, nasl_cipher_des): New functions.

	* nasl/nasl_crypto.h: Add function prototype.

	* nasl/nasl_init.c (libfuncs): Add nasl DES() function.

2015-08-20  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_file.c (openvas_file_md5sum): New function.

	* base/openvas_file.h: Add function prototype.

	* nasl/nasl_grammar.y (init_nasl_ctx): Cache the md5sum of the verified